# dynamic-kernel

./: .gitignore  NEURAL_V2_HARD_ROUTER_BENCHMARK_REPORT.md  NEURAL_V2_ROUTER_BENCHMARK_REPORT.md  README.md  adapters.py  ant_aco_comparator.py  ant_foraging_dte.py  ant_foraging_phase_diagram.py  ant_foraging_seed_sweep.py  api.py  compare.py  consumer_goods_choice_falsification.py  consumer_goods_circulation.py  consumer_goods_multisku.py  consumer_goods_multisku_combined_fine.py  consumer_goods_multisku_frontier.py  consumer_goods_severity_sweep.py  deep_investigate.py  design_space.py  design_space_second_pass.py  design_space_sweep.py  diagnose.py  geopolitical_influence.py  influence_budget_sweep.py  influence_defender_learning.py  influence_dense_sweep.py  influence_game.py  influence_mechanism_sensitivity.py  influence_phase_surface.py  influence_qlearn.py  influence_seed_sweep.py  influence_wargame.py  investigate_neural.py  kernel.py  kernel_local_regret_witness.py  legitimacy_ontology.py  leverage_screen.py  leverage_screen_output.json  microbiome_ecology_dte.py  microbiome_timing_sweep.py  (+44 more)
docs/: DTE_NATIVE_UCB_DESIGN_NOTE.md  DTE_PAPER_DRAFT.md  DTE_PAPER_INTERNAL_REVIEW.md  DTE_PAPER_WORKPLAN.md  DTE_V1_EXPERIMENT_MANIFEST.md  DTE_V1_THEORY.md  DYNAMIC_KERNEL_UI_UX_AUDIT.md  KERNEL_LOCAL_REGRET_WITNESS_REPORT.md  LEVERAGE_SCREEN_REPORT.md  NEURAL_DTE_REASSESSMENT.md  NEURAL_V2_ADAPTIVE_ROUTING_REPORT.md  NEURAL_V2_ADVERSARIAL_SWITCH_REPORT.md  NEURAL_V2_FRONTIER_REPORT.md  NEURAL_V2_SEED_VALIDATION_FIGURE_REPORT.md  NEURAL_V2_SEED_VALIDATION_REPORT.md  (+8 more)
(+82 files in other folders)
